# flowforge

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  OPTIMIZATION_PLAN.md  README.md  dev.bat  docker-compose.yml  installer.iss  package.ps1  reasonix.toml  run_flutter.bat  start-dev.bat  watch-rust.bat
.codegraph/: daemon.pid
.github/actions/setup-flutter/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
deploy/: flowforge.service
docs/: DEVELOPING_NODES.md
extensions/flowforge-webbridge/: README.md  background.js  popup.html
flutter_app/: README.md  pubspec.yaml
flutter_app/assets/translations/: en.json  zh.json
flutter_app/lib/: main.dart
flutter_app/lib/api/: flowforge_api.dart
flutter_app/lib/bloc/: workspace_bloc.dart
flutter_app/lib/pages/: dashboard_page.dart  editor_page.dart  settings_page.dart
flutter_app/lib/pages/settings/: about_settings.dart  general_settings.dart  plugin_settings.dart  settings_shell.dart  shortcut_settings.dart
flutter_app/lib/services/: server_manager.dart
flutter_app/lib/theme/: flowforge_theme.dart
flutter_app/lib/widgets/: canvas_editor.dart  code_editor.dart  command_palette.dart  ff_layout.dart  ff_widgets.dart  flowforge_icons.dart
flutter_app/linux/: CMakeLists.txt  my_application.cc  my_application.h
flutter_app/linux/flutter/: generated_plugin_registrant.cc
flutter_app/linux/flutter/ephemeral/: generated_config.cmake
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
scripts/: package.sh
src/: api_gateway.rs  lib.rs  main.rs  scheduler.rs
src/api/: mod.rs  openapi.rs
src/auth/: middleware.rs  mod.rs
src/engine/: executor.rs  mod.rs  resolver.rs  storage.rs  workflow.rs
src/error/: mod.rs
src/nodes/: condition_node.rs  cron_node.rs  database_node.rs  delay_node.rs  docx_create_node.rs  docx_read_node.rs  email_read_node.rs  email_send_node.rs  excel_read_node.rs  excel_write_node.rs  file_node.rs  ftp_download_node.rs  ftp_upload_node.rs  http_node.rs  image_process_node.rs  json_node.rs  log_node.rs  loop_node.rs  mod.rs  notification_node.rs  pdf_extract_node.rs  regex_node.rs  registry.rs  script_node.rs  shell_node.rs  template_node.rs  traits.rs  transform_node.rs  try_catch_node.rs  variable_node.rs  web_click_node.rs  web_extract_node.rs  web_input_node.rs  web_navigate_node.rs  web_screenshot_node.rs  web_wait_node.rs  webbridge.rs  webhook_node.rs
src/plugin/: mod.rs
src/state/: mod.rs
src/webbridge/: mod.rs
tests/: integration_test.rs  node_tests.rs
