[package]
name = "flowforge"
version = "0.1.0"
edition = "2021"
description = "Visual workflow automation engine"
license = "MIT"
readme = "README.md"

[[bin]]
name = "flowforge"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Scripting
rhai = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
regex = "1"

# Async trait support
async-trait = "0.1"
