[package]
name = "flowforge"
version = "1.1.0"
edition = "2021"
description = "Visual workflow automation engine"
license = "MIT"
readme = "README.md"

[[bin]]
name = "flowforge"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Scripting
rhai = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"
once_cell = "1"
regex = "1"

# Async trait support
async-trait = "0.1"

# HTTP client (for http_node real implementation)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# WebSocket client (for webbridge browser automation)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
imap = "2.4"
native-tls = "0.2"
suppaftp = "5.0"
image = "0.25"
pdf-extract = "0.7"
futures-util = "0.3"

# Excel read (calamine)
calamine = "0.26"

# Excel write (umya-spreadsheet)
umya-spreadsheet = "1"

# ZIP support (for .docx read/write)
zip = "2"
quick-xml = "0.36"
csv = "1.3"
url = "2"

# Auth
rusqlite = { version = "0.31", features = ["bundled"] }
jsonwebtoken = "9"
bcrypt = "0.15"
# Feishu signature
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Dynamic plugin loading
libloading = "0.8"
